# allreduce-proto

./: .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  mpinvcc.sh
examples/: allreduce.cpp
ibcomm/: allreduce_cpu_impl.h  allreduce_cuda_impl.h  allreduce_tester.cpp  ibverbs_communicator.cpp  ibverbs_communicator.h  ibverbs_communicator_cuda.cpp  memory_pool.cpp  memory_pool.h  util.h
tests/: allreduce_test.py  sendrecv_test.cpp  unittest.cpp
